Feat: changed OG image

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>SlowGen</title>
-    <meta property="og:image" content="images/logo.png" />
+    <meta property="og:image" content="http://www.kali.nyc/images/home-logo-bottom.png" />
     <meta property="og:url" content="http://www.kali.nyc" />
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
