--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>SlowGen</title>
-    <meta property="og:image" content="http://www.kali.nyc/images/logo.png" />
+    <!-- <meta property="og:image" content="http://www.kali.nyc/images/logo.png" /> -->
     <meta property="og:url" content="http://www.kali.nyc" />
+    <meta property="og:description" content="Software Engineer"
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
   </head>
