Fix: syntax error in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>SlowGen</title>
     <!-- <meta property="og:image" content="http://www.kali.nyc/images/logo.png" /> -->
     <meta property="og:url" content="http://www.kali.nyc" />
-    <meta property="og:description" content="Software Engineer"
+    <meta property="og:description" content="Software Engineer">
     <link rel="stylesheet" href="/style.css" />
     <script defer src="/bundle.js"></script>
   </head>
