--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>SlowGen</title>
     <meta property="og:image" content="http://www.kali.nyc/images/logo.png" />
+    <meta property="og:type" content="image/png" />
     <meta property="og:url" content="http://www.kali.nyc" />
     <meta property="og:description" content="Software Engineer">
     <link rel="stylesheet" href="/style.css" />
