Fix: updated OG img tag

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Kali 'SlowGen' - Software Engineer</title>
     <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Kali 'SlowGen' - Software Engineer" />
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://www.kali.nyc/images/logo.png" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="images/logo.png" />
     <meta prefix="og: http://ogp.me/ns#" property="og:type" content="image/png" />
     <meta prefix="og: http://ogp.me/ns#" property="og:url" content="http://www.kali.nyc" />
     <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Software Engineer">
